--- a/app/src/main/res/layout/fragment_edit_memo.xml
+++ b/app/src/main/res/layout/fragment_edit_memo.xml
@@ -45,6 +45,25 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item_tags" />
+        <org.apmem.tools.layouts.FlowLayout
+            android:id="@+id/tags_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <EditText
+                android:id="@+id/edit_tag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </org.apmem.tools.layouts.FlowLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
         <TextView
