--- a/app/src/main/res/layout/fragment_edit_memo.xml
+++ b/app/src/main/res/layout/fragment_edit_memo.xml
@@ -57,7 +57,8 @@
             <EditText
                 android:id="@+id/edit_tag"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:singleLine="true"/>
         </org.apmem.tools.layouts.FlowLayout>
     </LinearLayout>
 
