adding new tag feature.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,8 @@
 
     <dimen name="item_title_font_size">18sp</dimen>
     <dimen name="item_content_font_size">14sp</dimen>
+
+    <dimen name="tag_horizontal_margin">2dp</dimen>
+    <dimen name="tag_vertical_margin">2dp</dimen>
+    <dimen name="tag_horizontal_padding">4dp</dimen>
 </resources>
