--- a/app/src/main/res/drawable/tag_item.xml
+++ b/app/src/main/res/drawable/tag_item.xml
@@ -3,16 +3,20 @@
 
     <item android:state_selected="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_material_light" />
-            <corners android:radius="10dp" />
-            <stroke android:color="@color/primary_text_default_material_light" />
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="5dp" />
+            <stroke
+                android:width="2dp"
+                android:color="@color/tag_background_border" />
         </shape>
     </item>
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_text_default_material_light" />
-            <corners android:radius="10dp" />
-            <stroke android:color="@color/background_material_light" />
+            <solid android:color="@android:color/darker_gray" />
+            <corners android:radius="5dp" />
+            <stroke
+                android:width="2dp"
+                android:color="@android:color/darker_gray" />
         </shape>
     </item>
 </selector>
