--- a/app/src/main/res/layout/fragment_edit_memo.xml
+++ b/app/src/main/res/layout/fragment_edit_memo.xml
@@ -53,13 +53,15 @@
         <org.apmem.tools.layouts.FlowLayout
             android:id="@+id/tags_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <EditText
-                android:id="@+id/edit_tag"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:singleLine="true"/>
-        </org.apmem.tools.layouts.FlowLayout>
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edit_tag"
+            android:gravity="left|center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:hint="@string/input_tag_hint"
+            android:imeOptions="actionDone"/>
     </LinearLayout>
 
     <LinearLayout
@@ -77,6 +79,7 @@
             android:layout_height="match_parent"
             android:gravity="top|left"
             android:id="@+id/edit_content"
+            android:hint="@string/input_content_hint"
             android:inputType="textMultiLine"/>
     </LinearLayout>
 
