--- a/app/src/main/res/layout/tag_flow_item.xml
+++ b/app/src/main/res/layout/tag_flow_item.xml
@@ -22,5 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
         android:id="@+id/tagflow_item_text" />
 </LinearLayout>
