define delete button size.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="tag_horizontal_margin">2dp</dimen>
     <dimen name="tag_vertical_margin">2dp</dimen>
     <dimen name="tag_horizontal_padding">4dp</dimen>
+    <dimen name="tag_delete_button_size">14dp</dimen>
 </resources>
