--- a/app/src/main/res/layout/tag_flow_item.xml
+++ b/app/src/main/res/layout/tag_flow_item.xml
@@ -12,8 +12,8 @@
     android:background="@drawable/tag_item">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/tag_delete_button_size"
+        android:layout_height="@dimen/tag_delete_button_size"
         android:layout_gravity="center"
         android:src="@android:drawable/ic_delete"
         android:id="@+id/tagflow_item_delete"
@@ -25,5 +25,6 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:id="@+id/tagflow_item_text" />
 </LinearLayout>
